Fix margin of the mobile product images on mobile

--- a/src/assets/scss/elements/images.scss
+++ b/src/assets/scss/elements/images.scss
@@ -28,6 +28,7 @@
 .product-image {
   display: block;
   margin-left: auto;
+  margin-right: 1.7rem;
   margin-bottom: .625rem;
   max-width: 14.7rem;
 
@@ -42,6 +43,7 @@
     display: inline-block;
     margin-left: 0;
     margin-bottom: 0;
+    margin-right: 0;
     max-width: 20rem;
     padding: .05rem;
     width: 50%;
