--- a/theme/assets/style.css
+++ b/theme/assets/style.css
@@ -592,6 +592,7 @@ body .eupopup-style-compact .eupopup-button {
 .product-image {
   display: block;
   margin-left: auto;
+  margin-right: 1.7rem;
   margin-bottom: .625rem;
   max-width: 14.7rem; }
   .product-image.product-image--large {
@@ -603,6 +604,7 @@ body .eupopup-style-compact .eupopup-button {
     display: inline-block;
     margin-left: 0;
     margin-bottom: 0;
+    margin-right: 0;
     max-width: 20rem;
     padding: .05rem;
     width: 50%; }
